--- a/index.html
+++ b/index.html
@@ -68,6 +68,16 @@
     <audio loop id="juju" src="projects/jukebox/juju.mp3" type="audio/mpeg" preload="auto"></audio>
     <audio loop id="yusef-diverse" src="projects/jukebox/yusef-diverse.mp3" type="audio/mpeg" preload="auto"></audio>
     <audio loop id="yusef-hush" src="projects/jukebox/yusef-hush.mp3" type="audio/mpeg" preload="auto"></audio>
+    <audio loop id="kitch" src="projects/jukebox/kitch.mp3" type="audio/mpeg" preload="auto"></audio>
+    <audio loop id="angelo" src="projects/jukebox/angelo.mp3" type="audio/mpeg" preload="auto"></audio>
+    <audio loop id="bob-marley" src="projects/jukebox/bob-marley.mp3" type="audio/mpeg" preload="auto"></audio>
+    <audio loop id="caribbean-ros" src="projects/jukebox/caribbean-ros.mp3" type="audio/mpeg" preload="auto"></audio>
+    <audio loop id="dancehall" src="projects/jukebox/dancehall.mp3" type="audio/mpeg" preload="auto"></audio>
+    <audio loop id="gabby-pahinui" src="projects/jukebox/gabby-pahinui.mp3" type="audio/mpeg" preload="auto"></audio>
+    <audio loop id="harry-belafonte" src="projects/jukebox/harry-belafonte.mp3" type="audio/mpeg" preload="auto"></audio>
+    <audio loop id="java" src="projects/jukebox/java.mp3" type="audio/mpeg" preload="auto"></audio>
+    <audio loop id="konviksyon" src="projects/jukebox/konviksyon.mp3" type="audio/mpeg" preload="auto"></audio>
+    <audio loop id="mongo" src="projects/jukebox/mongo.mp3" type="audio/mpeg" preload="auto"></audio>
 </head>
 
 <body>
@@ -197,6 +207,16 @@
         <img alt="record album cover" src="projects/jukebox/juju.jpg" onmouseover="playSound('juju')" onmouseleave="stopSound('juju')"/>
         <img alt="record album cover" src="projects/jukebox/yusef-diverse.jpg" onmouseover="playSound('yusef-diverse')" onmouseleave="stopSound('yusef-diverse')"/>
         <img alt="record album cover" src="projects/jukebox/yusef-hush.jpg" onmouseover="playSound('yusef-hush')" onmouseleave="stopSound('yusef-hush')"/>
+        <img alt="record album cover" src="projects/jukebox/kitch.jpg" onmouseover="playSound('kitch')" onmouseleave="stopSound('kitch')"/>
+        <img alt="record album cover" src="projects/jukebox/angelo.jpg" onmouseover="playSound('angelo')" onmouseleave="stopSound('angelo')"/>
+        <img alt="record album cover" src="projects/jukebox/bob-marley.jpg" onmouseover="playSound('bob-marley')" onmouseleave="stopSound('bob-marley')"/>
+        <img alt="record album cover" src="projects/jukebox/caribbean-ros.jpg" onmouseover="playSound('caribbean-ros')" onmouseleave="stopSound('caribbean-ros')"/>
+        <img alt="record album cover" src="projects/jukebox/dancehall.jpg" onmouseover="playSound('dancehall')" onmouseleave="stopSound('dancehall')"/>
+        <img alt="record album cover" src="projects/jukebox/gabby-pahinui.jpg" onmouseover="playSound('gabby-pahinui')" onmouseleave="stopSound('gabby-pahinui')"/>
+        <img alt="record album cover" src="projects/jukebox/harry-belafonte.jpg" onmouseover="playSound('harry-belafonte')" onmouseleave="stopSound('harry-belafonte')"/>
+        <img alt="record album cover" src="projects/jukebox/java.jpg" onmouseover="playSound('java')" onmouseleave="stopSound('java')"/>
+        <img alt="record album cover" src="projects/jukebox/konviksyon.jpg" onmouseover="playSound('konviksyon')" onmouseleave="stopSound('konviksyon')"/>
+        <img alt="record album cover" src="projects/jukebox/mongo.jpg" onmouseover="playSound('mongo')" onmouseleave="stopSound('mongo')"/>
     </div>
     <div class="section" id="contact">
         <div class="content desktop">
