--- a/index.html
+++ b/index.html
@@ -78,6 +78,16 @@
     <audio loop id="java" src="projects/jukebox/java.mp3" type="audio/mpeg" preload="auto"></audio>
     <audio loop id="konviksyon" src="projects/jukebox/konviksyon.mp3" type="audio/mpeg" preload="auto"></audio>
     <audio loop id="mongo" src="projects/jukebox/mongo.mp3" type="audio/mpeg" preload="auto"></audio>
+    <audio loop id="musical-youth" src="projects/jukebox/musical-youth.mp3" type="audio/mpeg" preload="auto"></audio>
+    <audio loop id="ozzie-hall" src="projects/jukebox/ozzie-hall.mp3" type="audio/mpeg" preload="auto"></audio>
+    <audio loop id="third-world" src="projects/jukebox/third-world.mp3" type="audio/mpeg" preload="auto"></audio>
+    <audio loop id="trinidad" src="projects/jukebox/trinidad.mp3" type="audio/mpeg" preload="auto"></audio>
+    <audio loop id="raul-de-souza" src="projects/jukebox/raul-de-souza.mp3" type="audio/mpeg" preload="auto"></audio>
+    <audio loop id="cesar-mariano" src="projects/jukebox/cesar-mariano.mp3" type="audio/mpeg" preload="auto"></audio>
+    <audio loop id="mendes-beat" src="projects/jukebox/mendes-beat.mp3" type="audio/mpeg" preload="auto"></audio>
+    <audio loop id="mendes-86" src="projects/jukebox/mendes-86.mp3" type="audio/mpeg" preload="auto"></audio>
+    <audio loop id="afrika" src="projects/jukebox/afrika.mp3" type="audio/mpeg" preload="auto"></audio>
+    <audio loop id="burkina-faso" src="projects/jukebox/burkina-faso.mp3" type="audio/mpeg" preload="auto"></audio>
 </head>
 
 <body>
@@ -163,7 +173,9 @@
         <a aria-label="Listen to Sequoia" href="https://soundcloud.com/soundslikesequoia/">Listen to Sequoia</a>
         </br></br></br></br>
         <h2>Jukebox</h2>
-        <p>An ongoing personal collection of vinyl and accompanying samples.</p>
+        <p>An ongoing personal collection of vinyl and accompanying samples.
+        </br></br>
+        <i>(currently 36% complete)</i></p>
         </br></br>
     </div>
     <div id="records">
@@ -217,6 +229,16 @@
         <img alt="record album cover" src="projects/jukebox/java.jpg" onmouseover="playSound('java')" onmouseleave="stopSound('java')"/>
         <img alt="record album cover" src="projects/jukebox/konviksyon.jpg" onmouseover="playSound('konviksyon')" onmouseleave="stopSound('konviksyon')"/>
         <img alt="record album cover" src="projects/jukebox/mongo.jpg" onmouseover="playSound('mongo')" onmouseleave="stopSound('mongo')"/>
+        <img alt="record album cover" src="projects/jukebox/musical-youth.jpg" onmouseover="playSound('musical-youth')" onmouseleave="stopSound('musical-youth')"/>
+        <img alt="record album cover" src="projects/jukebox/ozzie-hall.jpg" onmouseover="playSound('ozzie-hall')" onmouseleave="stopSound('ozzie-hall')"/>
+        <img alt="record album cover" src="projects/jukebox/third-world.jpg" onmouseover="playSound('third-world')" onmouseleave="stopSound('third-world')"/>
+        <img alt="record album cover" src="projects/jukebox/trinidad.jpg" onmouseover="playSound('trinidad')" onmouseleave="stopSound('trinidad')"/>
+        <img alt="record album cover" src="projects/jukebox/raul-de-souza.jpg" onmouseover="playSound('raul-de-souza')" onmouseleave="stopSound('raul-de-souza')"/>
+        <img alt="record album cover" src="projects/jukebox/cesar-mariano.jpg" onmouseover="playSound('cesar-mariano')" onmouseleave="stopSound('cesar-mariano')"/>
+        <img alt="record album cover" src="projects/jukebox/mendes-beat.jpg" onmouseover="playSound('mendes-beat')" onmouseleave="stopSound('mendes-beat')"/>
+        <img alt="record album cover" src="projects/jukebox/mendes-86.jpg" onmouseover="playSound('mendes-86')" onmouseleave="stopSound('mendes-86')"/>
+        <img alt="record album cover" src="projects/jukebox/afrika.jpg" onmouseover="playSound('afrika')" onmouseleave="stopSound('afrika')"/>
+        <img alt="record album cover" src="projects/jukebox/burkina-faso.jpg" onmouseover="playSound('burkina-faso')" onmouseleave="stopSound('burkina-faso')"/>
     </div>
     <div class="section" id="contact">
         <div class="content desktop">
