--- a/index.html
+++ b/index.html
@@ -133,6 +133,10 @@
         <p id="principles"><i>"Let's change the way we eat, the change the way live, and let's change the way we treat each other."</i></p>
         <p><i>—Tupac Shakur, 1992</i></p>
         </br></br>
+        <h5>Current Music Inspiration</h5>
+        </br>
+        <iframe src="https://open.spotify.com/embed/playlist/0RXT1iJV9MijuIEaESHq9N" style="width:100%;height:248px;" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+        </br></br></br>
         <h5>Principles</h5>
         </br>
         <h2>Communication</h2>
