--- a/index.html
+++ b/index.html
@@ -88,6 +88,16 @@
     <audio loop id="mendes-86" src="projects/jukebox/mendes-86.mp3" type="audio/mpeg" preload="auto"></audio>
     <audio loop id="afrika" src="projects/jukebox/afrika.mp3" type="audio/mpeg" preload="auto"></audio>
     <audio loop id="burkina-faso" src="projects/jukebox/burkina-faso.mp3" type="audio/mpeg" preload="auto"></audio>
+    <audio loop id="chopup" src="projects/jukebox/chopup.mp3" type="audio/mpeg" preload="auto"></audio>
+    <audio loop id="peter-king" src="projects/jukebox/peter-king.mp3" type="audio/mpeg" preload="auto"></audio>
+    <audio loop id="sam-fan" src="projects/jukebox/sam-fan.mp3" type="audio/mpeg" preload="auto"></audio>
+    <audio loop id="seun-kuti" src="projects/jukebox/seun-kuti.mp3" type="audio/mpeg" preload="auto"></audio>
+    <audio loop id="toure-kunda" src="projects/jukebox/toure-kunda.mp3" type="audio/mpeg" preload="auto"></audio>
+    <audio loop id="mahotella" src="projects/jukebox/mahotella.mp3" type="audio/mpeg" preload="auto"></audio>
+    <audio loop id="masekela" src="projects/jukebox/masekela.mp3" type="audio/mpeg" preload="auto"></audio>
+    <audio loop id="miriam" src="projects/jukebox/miriam.mp3" type="audio/mpeg" preload="auto"></audio>
+    <audio loop id="soweto" src="projects/jukebox/soweto.mp3" type="audio/mpeg" preload="auto"></audio>
+    <audio loop id="abdel" src="projects/jukebox/abdel.mp3" type="audio/mpeg" preload="auto"></audio>
 </head>
 
 <body>
@@ -243,6 +253,16 @@
         <img alt="record album cover" src="projects/jukebox/mendes-86.jpg" onmouseover="playSound('mendes-86')" onmouseleave="stopSound('mendes-86')"/>
         <img alt="record album cover" src="projects/jukebox/afrika.jpg" onmouseover="playSound('afrika')" onmouseleave="stopSound('afrika')"/>
         <img alt="record album cover" src="projects/jukebox/burkina-faso.jpg" onmouseover="playSound('burkina-faso')" onmouseleave="stopSound('burkina-faso')"/>
+        <img alt="record album cover" src="projects/jukebox/chopup.jpg" onmouseover="playSound('chopup')" onmouseleave="stopSound('chopup')"/>
+        <img alt="record album cover" src="projects/jukebox/peter-king.jpg" onmouseover="playSound('peter-king')" onmouseleave="stopSound('peter-king')"/>
+        <img alt="record album cover" src="projects/jukebox/sam-fan.jpg" onmouseover="playSound('sam-fan')" onmouseleave="stopSound('sam-fan')"/>
+        <img alt="record album cover" src="projects/jukebox/seun-kuti.jpg" onmouseover="playSound('seun-kuti')" onmouseleave="stopSound('seun-kuti')"/>
+        <img alt="record album cover" src="projects/jukebox/toure-kunda.jpg" onmouseover="playSound('toure-kunda')" onmouseleave="stopSound('toure-kunda')"/>
+        <img alt="record album cover" src="projects/jukebox/mahotella.jpg" onmouseover="playSound('mahotella')" onmouseleave="stopSound('mahotella')"/>
+        <img alt="record album cover" src="projects/jukebox/masekela.jpg" onmouseover="playSound('masekela')" onmouseleave="stopSound('masekela')"/>
+        <img alt="record album cover" src="projects/jukebox/miriam.jpg" onmouseover="playSound('miriam')" onmouseleave="stopSound('miriam')"/>
+        <img alt="record album cover" src="projects/jukebox/soweto.jpg" onmouseover="playSound('soweto')" onmouseleave="stopSound('soweto')"/>
+        <img alt="record album cover" src="projects/jukebox/abdel.jpg" onmouseover="playSound('abdel')" onmouseleave="stopSound('abdel')"/>
     </div>
     <div class="section" id="contact">
         <div class="content desktop">
