updating sound color

--- a/index.html
+++ b/index.html
@@ -176,10 +176,10 @@
         </br>
         <a aria-label="Visit Weiigh" href="https://weiigh.com/">Visit Weiigh</a>
         </br></br></br></br>
-        <h2>Supersonicas</h2>
+        <h2>Sound Color Project</h2>
         <p>A sound-color experiment offering accessibility to sound for people who experience hearing loss.</p>
         </br>
-        <a aria-label="Visit Supersonicas" href="https://supersonicas.com/">Visit Supersonicas</a>
+        <a aria-label="Visit Sound Color Project" href="https://soundcolorproject.com/">Visit Sound Color Project</a>
         </br></br></br></br>
         <h2>Sequoia</h2>
         <p>Music exploring the juxtaposition of genres.</p>
