--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="mt-m"></div>
         <span>-</span>
         <div class="mt-m"></div>
-        <span>"Let's change the way we eat, let's change the way live, and let's change the way we treat each other."</span>
+        <span>"Let's change the way we eat, let's change the way we live, and let's change the way we treat each other."</span>
         <div class="mt-m"></div>
         <span>— Tupac Shakur, 1992</span>
         <div class="mt-xl"></div>
