added feednurses project

--- a/index.html
+++ b/index.html
@@ -225,6 +225,29 @@
 
         <div class="mt-xxl"></div>
         <div class="project-title">
+            <img src="images/feednurses.svg" alt="Letters F and N on a purple background"/>
+            <h4>FeedNurses.com</h4>
+            <a class="ext-link" href="https://www.feednurses.com/" target="_blank">Visit</a>
+        </div>
+        <div class="mt-m"></div>
+        <p>FeedNurses.com helps connect people willing to help buy a meal for a hospital worker on the frontlines with hospitals full of these people.</p>
+        <div class="mt-m"></div>
+        <h5>Role</h5>
+        <div class="mt-s"></div>
+        <p>Co-Creation, Design, Frontend Development</p>
+        <div class="mt-m"></div>
+        <h5>Goal</h5>
+        <div class="mt-s"></div>
+        <p>Create a simple way to help people donate to hospital workers in the form of providing an amount to cover a meal.</p>
+        <div class="mt-m"></div>
+        <h5>Target</h5>
+        <div class="mt-s"></div>
+        <p>Hospital workers who work shifts that span across 2 or more meals and have to normally purchase these meals for themselves.</p>
+        <div class="mt-l"></div>
+        <img class="work-img" src="images/feednurses.png" alt="Home page website for feednurses.com"/>
+
+        <div class="mt-xxl"></div>
+        <div class="project-title">
             <img src="images/samcart.svg" alt="SamCart Logo"/>
             <h4>SamCart</h4>
             <a class="ext-link" href="https://samcart.com" target="_blank">Visit</a>
