updated font and cards and links

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="styles/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Inter:400,500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Tenali+Ramakrishna&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Gotu&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <title>Derek Torsani</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -25,7 +25,7 @@
 <div id="content">
 
     <header>
-        <h1>I’m Derek — a designer, musician, and friend.</h1>
+        <h1>I’m Derek (he/him) — a designer, musician, and friend.</h1>
         <nav>
             <div id="page-links">
                 <a href="#principles" title="Principles">Principles</a>
@@ -100,58 +100,46 @@
     <h2 id="design">Design —</h2>
     <section>
         <article>
-            <div class="card">
-                <a href="https://medium.com/@dmtors/sound-color-project-9b2fbf959b7e" title="Sound Color Project" target="_blank">Sound Color Project</a>
+            <a class="card" href="https://medium.com/@dmtors/sound-color-project-9b2fbf959b7e" title="Sound Color Project" target="_blank">
+                <h3>Sound Color Project</h3>
                 <h4>Accessibility Experiment • 2019–2020</h4>
-            </div>
+            </a>
         </article>
         <article>
-            <div class="card">
-                <a href="https://medium.com/@dmtors/halfdollar-6b6124d2eced" title="Halfdollar" target="_blank">Halfdollar</a>
+            <a class="card" href="https://medium.com/@dmtors/halfdollar-6b6124d2eced" title="Halfdollar" target="_blank">
+                <h3>Halfdollar</h3>
                 <h4>Spreadsheet Budgeting • 2015–2020</h4>
-            </div>
+            </a>
         </article>
         <article>
-            <div class="card">
-                <a href="https://medium.com/@dmtors/vapor-redwood-6ba16daaae86" title="Vapor/Redwood" target="_blank">Vapor/Redwood</a>
+            <a class="card" href="https://medium.com/@dmtors/vapor-redwood-6ba16daaae86" title="Vapor/Redwood" target="_blank">
+                <h3>Vapor/Redwood</h3>
                 <h4>Oracle Data Cloud Design System • 2018–2020</h4>
-            </div>
+            </a>
         </article>
-        <!-- <article>
-            <div class="card">
-                <a href="#" title="Forecast" target="_blank">Forecast</a>
-                <h4>Card Game • 2020</h4>
-            </div>
-        </article> -->
         <article>
-            <div class="card">
-                <a href="https://medium.com/@dmtors/adt-control-a06629443a4a" title="ADT Control" target="_blank">ADT Control</a>
+            <a class="card" href="https://medium.com/@dmtors/adt-control-a06629443a4a" title="ADT Control" target="_blank">
+                <h3>ADT Control</h3>
                 <h4>Mobile App • 2018</h4>
-            </div>
+            </a>
         </article>
         <article>
-            <div class="card">
-                <a href="https://medium.com/@dmtors/signals-b456ab01b387" title="Signals" target="_blank">Signals</a>
+            <a class="card" href="https://medium.com/@dmtors/signals-b456ab01b387" title="Signals" target="_blank">
+                <h3>Signals</h3>
                 <h4>Alarm.com Design System • 2018</h4>
-            </div>
+            </a>
         </article>
         <article>
-            <div class="card">
-                <a href="https://medium.com/@dmtors/autra-automatic-content-translation-9763776117c8" title="Autra" target="_blank">Autra</a>
-                <h4>Accessibility Experiment • 2018</h4>
-            </div>
-        </article>
-        <article>
-            <div class="card">
-                <a href="https://medium.com/@dmtors/being-a-designer-at-a-startup-a414b7b41d88" title="SamCart" target="_blank">SamCart</a>
+            <a class="card" href="https://medium.com/@dmtors/being-a-designer-at-a-startup-a414b7b41d88" title="SamCart" target="_blank">
+                <h3>SamCart</h3>
                 <h4>E-Commerce Startup • 2015–2017</h4>
-            </div>
+            </a>
         </article>
         <article>
-            <div class="card">
-                <a href="https://dribbble.com/dmtors/projects/319430-Daily-UI" title="Daily UI" target="_blank">Daily UI</a>
-                <h4>Design Exercise • 2016</h4>
-            </div>
+            <a class="card" href="https://dribbble.com/dmtors/projects/319430-Daily-UI" title="Daily UI" target="_blank">
+                <h3>Daily UI</h3>
+                <h4>Design Exercise • 2015–2016</h4>
+            </a>
         </article>
     </section>
 
@@ -165,47 +153,47 @@
             <p>Currently, I am exploring how the influence of music from all over the world manifests through what I can create, with a project called <a href="https://linktr.ee/soundslikesequoia" target="_blank" title="Sequoia">Sequoia</a>.</p>
         </article>
         <article>
-            <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/829084000&color=%23464a4c&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #828587;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: 'Inter', -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;"><a href="https://soundcloud.com/soundslikesequoia" title="Sequoia" target="_blank" style="color: #828587; text-decoration: none;">Sequoia</a> · <a href="https://soundcloud.com/soundslikesequoia/fighting-for-freedom" title="Fighting for Freedom" target="_blank" style="color: #828587; text-decoration: none;">Fighting for Freedom</a></div>
+            <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/829084000&color=%23464a4c&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
         </article>
     </section>
 
     <h2 id="writing">Writing —</h2>
     <section>
         <article>
-            <div class="card">
-                <a href="https://medium.com/@dmtors/should-designers-b722a566159" title="Should designers...?" target="_blank">Should designers...?</a>
+            <a class="card" href="https://medium.com/@dmtors/should-designers-b722a566159" title="Should designers...?" target="_blank">
+                <h3>Should designers...?</h3>
                 <h4>2020</h4>
-            </div>
+            </a>
         </article>
         <article>
-            <div class="card">
-                <a href="https://medium.com/@dmtors/read-more-ce7d8bd301b5" title="Read More" target="_blank">Read More</a>
+            <a class="card" href="https://medium.com/@dmtors/read-more-ce7d8bd301b5" title="Read More" target="_blank">
+                <h3>Read More</h3>
                 <h4>2020</h4>
-            </div>
+            </a>
         </article>
         <article>
-            <div class="card">
-                <a href="https://medium.com/@dmtors/being-a-color-blind-designer-aa6828c09a42" title="Design & Colorblind" target="_blank">Design &amp; Colorblind</a>
+            <a class="card" href="https://medium.com/@dmtors/being-a-color-blind-designer-aa6828c09a42" title="Design & Colorblind" target="_blank">
+                <h3>Design &amp; Colorblind</h3>
                 <h4>2018</h4>
-            </div>
+            </a>
         </article>
         <article>
-            <div class="card">
-                <a href="https://blog.prototypr.io/6-tips-and-50-resources-for-young-product-designers-32acb4872ee1" title="Tips & Resources for New Designers" target="_blank">Tips &amp; Resources for New Designers</a>
+            <a class="card" href="https://blog.prototypr.io/6-tips-and-50-resources-for-young-product-designers-32acb4872ee1" title="Tips & Resources for New Designers" target="_blank">
+                <h3>Tips &amp; Resources for New Designers</h3>
                 <h4>2017</h4>
-            </div>
+            </a>
         </article>
         <article>
-            <div class="card">
-                <a href="https://blog.prototypr.io/7-tips-40-resources-from-my-first-year-in-product-design-5600aa3da4eb" title="My First Year in Product Design" target="_blank">My First Year in Product Design</a>
+            <a class="card" href="https://blog.prototypr.io/7-tips-40-resources-from-my-first-year-in-product-design-5600aa3da4eb" title="My First Year in Product Design" target="_blank">
+                <h3>My First Year in Product Design</h3>
                 <h4>2016</h4>
-            </div>
+            </a>
         </article>
         <article>
-            <div class="card">
-                <a href="https://medium.com/@dmtors/my-4-5-month-journey-with-daily-ui-1ce0f103d2bb" title="4.5 Months with Daily UI" target="_blank">4.5 Months with Daily UI</a>
+            <a class="card" href="https://medium.com/@dmtors/my-4-5-month-journey-with-daily-ui-1ce0f103d2bb" title="4.5 Months with Daily UI" target="_blank">
+                <h3>4.5 Months with Daily UI</h3>
                 <h4>2016</h4>
-            </div>
+            </a>
         </article>
     </section>
 
@@ -238,7 +226,7 @@
     </section>
 
     <footer>
-        <a href="derektorsani-resume-2020.pdf" target="_blank" title="Resume">Resume</a>
+        <a href="derektorsani-resume-2020.pdf" target="_blank" title="Resume">Résumé</a>
         <a href="#" title="Back to Top">Back to Top</a>
     </footer>
 </div>
