updated website with new sections and altered layout

--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
             <div id="page-links">
                 <a href="#principles" title="Principles">Principles</a>
                 <a href="#design" title="Design">Design</a>
-                <a href="#music" title="Music">Music</a>
+                <a href="#process" title="Process">Process</a>
                 <a href="#writing" title="Writing">Writing</a>
+                <a href="#music" title="Music">Music</a>
                 <a href="#volunteering" title="Volunteering">Volunteering</a>
-                <a href="#portfolio-archive" title="Portfolio Archive">Portfolio Archive</a>
+                <a href="#reviews" title="Reviews">Reviews</a>
             </div>
             <div id="social-links">
                 <a href="https://linktr.ee/soundslikesequoia" target="_blank" title="Music Linktree">
@@ -102,43 +103,146 @@
         <article>
             <a class="card" href="https://medium.com/@dmtors/sound-color-project-9b2fbf959b7e" title="Sound Color Project" target="_blank">
                 <h3>Sound Color Project</h3>
-                <h4>Accessibility Experiment • 2019–2020</h4>
+                <h6>Accessibility Experiment • 2019–2020</h6>
             </a>
         </article>
         <article>
             <a class="card" href="https://medium.com/@dmtors/halfdollar-6b6124d2eced" title="Halfdollar" target="_blank">
                 <h3>Halfdollar</h3>
-                <h4>Spreadsheet Budgeting • 2015–2020</h4>
+                <h6>Spreadsheet Budgeting • 2015–2020</h6>
             </a>
         </article>
         <article>
             <a class="card" href="https://medium.com/@dmtors/vapor-redwood-6ba16daaae86" title="Vapor/Redwood" target="_blank">
                 <h3>Vapor/Redwood</h3>
-                <h4>Oracle Data Cloud Design System • 2018–2020</h4>
+                <h6>Oracle Data Cloud Design System • 2018–2020</h6>
             </a>
         </article>
         <article>
             <a class="card" href="https://medium.com/@dmtors/adt-control-a06629443a4a" title="ADT Control" target="_blank">
                 <h3>ADT Control</h3>
-                <h4>Mobile App • 2018</h4>
+                <h6>Mobile App • 2018</h6>
             </a>
         </article>
         <article>
             <a class="card" href="https://medium.com/@dmtors/signals-b456ab01b387" title="Signals" target="_blank">
                 <h3>Signals</h3>
-                <h4>Alarm.com Design System • 2018</h4>
+                <h6>Alarm.com Design System • 2018</h6>
             </a>
         </article>
         <article>
             <a class="card" href="https://medium.com/@dmtors/being-a-designer-at-a-startup-a414b7b41d88" title="SamCart" target="_blank">
                 <h3>SamCart</h3>
-                <h4>E-Commerce Startup • 2015–2017</h4>
+                <h6>E-Commerce Startup • 2015–2017</h6>
             </a>
         </article>
         <article>
             <a class="card" href="https://dribbble.com/dmtors/projects/319430-Daily-UI" title="Daily UI" target="_blank">
                 <h3>Daily UI</h3>
-                <h4>Design Exercise • 2015–2016</h4>
+                <h6>Design Exercise • 2015–2016</h6>
+            </a>
+        </article>
+    </section>
+
+    <h2 id="process">Process —</h2>
+    <section id="section-process">
+        <article>
+            <h3>Ideation</h3>
+            <h6>Seeking inspiration, collecting resources, and sketching initial ideas helps to get started on a task.</h6>
+            <img src="images/ideation-1.jpeg" alt=""/>
+            <img src="images/ideation-2.png" alt=""/>
+        </article>
+        <article>
+            <h3>Research</h3>
+            <h6>Understanding a problem is always key to finding the right solution to a problem.</h6>
+            <img src="images/research-1.jpg" alt=""/>
+            <img src="images/research-2.png" alt=""/>
+        </article>
+        <article>
+            <h3>Workflow</h3>
+            <h6>Creating a visual workflow map ensures cohesion between everybody involved.</h6>
+            <img src="images/workflow-1.png" alt=""/>
+        </article>
+        <article>
+            <h3>Wireframe</h3>
+            <h6>Getting started on visuals in a lower fidelity state helps guide initial user testing and inform design decisions.</h6>
+            <img src="images/wireframe-1.jpg" alt=""/>
+            <img src="images/wireframe-2.jpg" alt=""/>
+            <!-- <img src="images/wireframe-3.jpg" alt=""/> -->
+        </article>
+        <article>
+            <h3>Prototype</h3>
+            <h6>Building prototypes continues on the ability to user test and communicate vision to team members.</h6>
+            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="100%" height="600px" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FbO6BOC7R4WJn57iTscSBnS%2FADT%3Fnode-id%3D3%253A1%26viewport%3D139%252C446%252C0.18872928619384766%26scaling%3Dscale-down&chrome=DOCUMENTATION" allowfullscreen></iframe>
+        </article>
+        <article>
+            <h3>Animation</h3>
+            <h6>Creating motion designs is a great way to share specific interactions and animations with engineers.</h6>
+            <img src="images/animation-1.gif" alt=""/>
+            <img src="images/animation-2.gif" alt=""/>
+            <!-- <img src="images/animation-3.gif" alt=""/> -->
+        </article>
+        <article>
+            <h3>Design Systems</h3>
+            <h6>Building design systems is always an important part of the process to help create consistency and cohesion between all parts of a team and project.</h6>
+            <img src="images/designsystem-1.gif" alt=""/>
+            <img src="images/designsystem-2.gif" alt=""/>
+            <img src="images/designsystem-3.gif" alt=""/>
+        </article>
+        <article>
+            <h3>High-Fidelity</h3>
+            <h6>Designing detail-oriented interfaces including interactive states enables team members to find clarity in how something should look and feel.</h6>
+            <img src="images/hifi-1.png" alt=""/>
+            <img src="images/hifi-2.png" alt=""/>
+        </article>
+        <article>
+            <h3>Promotion</h3>
+            <h6>Communicating to the people who consume or use a project is crucial.</h6>
+            <iframe width="100%" height="280px" src="https://www.youtube.com/embed/Pq69nNQIjsA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </article>
+        <article>
+            <h3>Measurement</h3>
+            <h6>Setting goals and measuring success guides the reflection of a project both backward and forward.</h6>
+            <img src="images/measurement-1.png" alt=""/>
+        </article>
+    </section>
+
+    <h2 id="writing">Writing —</h2>
+    <section>
+        <article>
+            <a class="card" href="https://medium.com/@dmtors/should-designers-b722a566159" title="Should designers...?" target="_blank">
+                <h3>Should designers...?</h3>
+                <h6>2020</h6>
+            </a>
+        </article>
+        <article>
+            <a class="card" href="https://medium.com/@dmtors/read-more-ce7d8bd301b5" title="Read More" target="_blank">
+                <h3>Read More</h3>
+                <h6>2020</h6>
+            </a>
+        </article>
+        <article>
+            <a class="card" href="https://medium.com/@dmtors/being-a-color-blind-designer-aa6828c09a42" title="Design & Colorblind" target="_blank">
+                <h3>Design &amp; Colorblind</h3>
+                <h6>2018</h6>
+            </a>
+        </article>
+        <article>
+            <a class="card" href="https://blog.prototypr.io/6-tips-and-50-resources-for-young-product-designers-32acb4872ee1" title="Tips & Resources for New Designers" target="_blank">
+                <h3>Tips &amp; Resources for New Designers</h3>
+                <h6>2017</h6>
+            </a>
+        </article>
+        <article>
+            <a class="card" href="https://blog.prototypr.io/7-tips-40-resources-from-my-first-year-in-product-design-5600aa3da4eb" title="My First Year in Product Design" target="_blank">
+                <h3>My First Year in Product Design</h3>
+                <h6>2016</h6>
+            </a>
+        </article>
+        <article>
+            <a class="card" href="https://medium.com/@dmtors/my-4-5-month-journey-with-daily-ui-1ce0f103d2bb" title="4.5 Months with Daily UI" target="_blank">
+                <h3>4.5 Months with Daily UI</h3>
+                <h6>2016</h6>
             </a>
         </article>
     </section>
@@ -157,64 +261,35 @@
         </article>
     </section>
 
-    <h2 id="writing">Writing —</h2>
-    <section>
-        <article>
-            <a class="card" href="https://medium.com/@dmtors/should-designers-b722a566159" title="Should designers...?" target="_blank">
-                <h3>Should designers...?</h3>
-                <h4>2020</h4>
-            </a>
-        </article>
-        <article>
-            <a class="card" href="https://medium.com/@dmtors/read-more-ce7d8bd301b5" title="Read More" target="_blank">
-                <h3>Read More</h3>
-                <h4>2020</h4>
-            </a>
-        </article>
-        <article>
-            <a class="card" href="https://medium.com/@dmtors/being-a-color-blind-designer-aa6828c09a42" title="Design & Colorblind" target="_blank">
-                <h3>Design &amp; Colorblind</h3>
-                <h4>2018</h4>
-            </a>
-        </article>
-        <article>
-            <a class="card" href="https://blog.prototypr.io/6-tips-and-50-resources-for-young-product-designers-32acb4872ee1" title="Tips & Resources for New Designers" target="_blank">
-                <h3>Tips &amp; Resources for New Designers</h3>
-                <h4>2017</h4>
-            </a>
-        </article>
-        <article>
-            <a class="card" href="https://blog.prototypr.io/7-tips-40-resources-from-my-first-year-in-product-design-5600aa3da4eb" title="My First Year in Product Design" target="_blank">
-                <h3>My First Year in Product Design</h3>
-                <h4>2016</h4>
-            </a>
-        </article>
-        <article>
-            <a class="card" href="https://medium.com/@dmtors/my-4-5-month-journey-with-daily-ui-1ce0f103d2bb" title="4.5 Months with Daily UI" target="_blank">
-                <h3>4.5 Months with Daily UI</h3>
-                <h4>2016</h4>
-            </a>
-        </article>
-    </section>
-
     <h2 id="volunteering">Volunteering —</h2>
     <section>
         <article>
-            <p>Giving back to the community that has surrounded me through the different stages of my life is a very important personal value of mine.</p>
+            <h3>Mentoring</h3>
+            <p>With the privilege of education and experience comes the wealth of knowledge. Without sharing this gift of knowledge, we selfishly hold back others from helping move the goodness of humanity forward.</p>
             </br>
-            <p>Speaking Engagements:</p>
+            <p>As much as people reach out on <a href="https://www.outofofficehours.com/" target="_blank" title="Out of Office Hours">Out of Office Hours</a>, LinkedIn, Twitter, or email looking for any level of design mentorship, I make time. Whether having a short discussion, periodically meeting up, or helping a new designer break into the industry of design, I am grateful to learn as much from them as they might from me.</p>
+        </article>
+        <article id="volunteering-2">
+            <h3>Community</h3>
+            <p>Society contains systems that often distort and devalue the identities of our neighbors. One of those systems is the need to carry identification documents in order to receive employment, housing, education, or services.</p>
             </br>
-            <p>The Journey from Sound to Color, Sound Scene, 2020</p>
+            <p>In Washington, DC, I serve on a leadership team that helps to bring restoration to neighbors in our community in need of these documents. Among this team, I lead our technology initiatives, helping create ways to interview clients and track what services are needed.</p>
+        </article>
+        <article id="volunteering-3">
+            <h3>Speaking</h3>
+            <p>Sound Color Project, Sound Scene &amp; Hirshhorn, 2020</p>
             <p>Designing Systems with Others, NOVA UX, 2019</p>
             <p>Animating SVG, Hackital, 2017</p>
             <p>Design Disrupters Representative, Washington, DC, 2016</p>
             <p>Humor in Design, Maryland Institute Colleg of Art, 2011</p>
         </article>
-        <article id="volunteering-2">
-            <p>With the privilege of education and experience comes the wealth of knowledge. Without sharing this gift of knowledge, we selfishly hold back others from helping move the goodness of humanity forward. As much as people reach out on <a href="https://www.outofofficehours.com/" target="_blank" title="Out of Office Hours">Out of Office Hours</a>, LinkedIn, Twitter, or email looking for any level of design mentorship, I make time. Whether having a short discussion, periodically meeting up, or helping a new designer break into the industry of design, I am grateful to learn as much from them as they might from me.</p>
-        </article>
-        <article id="volunteering-3">
-            <p>Society contains systems that often distort and devalue the identities of our neighbors. One of those systems is the need to carry identification documents in order to receive employment, housing, education, or services. In DC, I serve on a leadership team that helps to bring restoration to neighbors in our community in need of these documents.</p>
+    </section>
+
+    <h2 id="reviews">Reviews —</h2>
+    <section id="section-reviews">
+        <article>
+            <p>"Derek is an amazing mentor! He is so easy to talk to and you learn so much from just chatting with him. He explains design concepts clearly and understands the best practices of the industry. His perspectives, view of the world, and ideas will enlighten and inspire you. I'm so thankful to have met Derek and found someone who is so senior in design treat me with the utmost respect and be so reliable. Whether it's answering a tough situational question to preparing you for an interview, Derek is so responsive and knowledgeable about what to expect. Incredibly talented and communicative, Derek is a great person to work with and learn from."</p>
+            <h6>Catherine R-K., Mentee</h6>
         </article>
     </section>
 
